# LasaSlanguage

./: .gitignore  .gitmodules  Gemfile  LICENSE  README.md  project.yml  token.h
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: core-implementation.md
dev/: ExternalLinkedFinalKeywords.txt  KeywordIdeas.txt  testprogram.lsl
examples/: testprogram.lsl
src/: LinkedList.c  LinkedList.h  interpreter.c  interpreter.h  lexer.c  lexer.h  stack.c  stack.h  token.c  token.h
test/: meson.build  test_addition.c  test_division.c  test_division.h  test_exponentiation.c  test_exponentiation.h  test_intarithmetic.c  test_intarithmetic.h  test_interpret.c  test_interpret.h  test_mixed_combarithmetic.c  test_mixed_combarithmetic.h  test_mixed_isoarithmetic.c  test_mixed_isoarithmetic.h  test_modulus.c  test_modulus.h  test_multiplication.c  test_multiplication.h  test_postdec.c  test_postdec.h  test_postinc.c  test_postinc.h  test_presentation.c  test_presentation.h  test_subtraction.c  test_subtraction.h
